--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsTut</title>
+    <title><%= t(".sample") %></title>
+    <title><%= yield(:title) %> | Ruby on Rails Tutorial <%= t(".sample") %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_tag "application", "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
     <%= yield %>
   </body>
 </html>
+
